P2/Arrays/01/var/archive/xmlreports/0/0/4/000129
Content-type: text/xml

<?xml version="1.0" encoding="utf-8"?>
<testing-report run-id="129" judge-id="4" status="CE" scoring="ACM" run-tests="0" contest-id="201" compile-error="yes" >
  <uuid>57d646a7-47e4-4fd5-a090-8d4155c19561</uuid>
  <compiler_output>000129.cpp:1:1: error: expected unqualified-id
/rightcode\
^
1 error generated.
</compiler_output>
</testing-report>
